# basic_blockchain_in_rust

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: block.rs
src/blockchain/: main.rs
