[package]
name = "basic_blockchain_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
core = { path = "crates/core" }
chrono = "0.4.19"

[features]

[lib]
path = "src/blockchain/lib.rs"

[profile.release]
debug = false
lto = true

[[bin]]
path = "src/blockchain/main.rs"
name = "blockchain"

[workspace]
members = ["crates/*"]
